Added comments to config and changed default settings